# gotask-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  Taskfile.yml  pyproject.toml
.cursor/rules/: tool-use-rule.mdc
src/: __init__.py  cursor_server.py  server.py  utils.py
tests/: test_dummy.py  test_server.py  test_utils.py
